--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,11 +12,42 @@
             padding: 0;
             box-sizing: border-box;
         }
+        /* Header */
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 30px;
+            background-color: #007BFF;
+            color: white;
+        }
 
+        .header .logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .header nav {
+            display: flex;
+            gap: 15px;
+        }
+
+        .header nav a {
+            color: white;
+            text-decoration: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .header nav a:hover {
+            background-color: #0056b3;
+        }
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f9;
             padding: 20px;
+            line-height: 1.6;
         }
 
         h1 {
@@ -59,11 +90,7 @@
             color: white;
             border: none;
             padding: 10px;
-            margin: 5px 0;
             border-radius: 5px;
-            display: inline-block;
-            width: 48%;
-            text-align: center;
         }
 
         button:hover {
@@ -74,6 +101,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            flex-wrap: wrap;
         }
 
         .output-area {
@@ -97,71 +125,12 @@
             background-color: #ccc;
             cursor: not-allowed;
         }
-        .categories button {
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007BFF;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-         .categories button:hover {
-            background-color: #0056b3;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 20px;
-            }
-
-            button {
-                width: 100%;
-                margin: 10px 0;
-            }
-        /* Header */
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 30px;
-            background-color: #007BFF;
-            color: white;
-        }
-
-        .header .logo {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .header nav {
-            display: flex;
-            gap: 15px;
-        }
-
-        .header nav a {
-            color: white;
-            text-decoration: none;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .header nav a:hover {
-            background-color: #0056b3;
-        }
-
-        /* Main Content */
-        .main {
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
 
         .categories {
             display: flex;
-            justify-content: space-evenly;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 10px;
             margin-bottom: 20px;
         }
 
@@ -179,7 +148,8 @@
         .categories button:hover {
             background-color: #0056b3;
         }
-          /* Footer */
+
+        /* Footer */
         .footer {
             background-color: #007BFF;
             color: white;
@@ -196,6 +166,7 @@
         .footer .right {
             display: flex;
             gap: 15px;
+            flex-wrap: wrap;
         }
 
         .footer .right a {
@@ -210,93 +181,101 @@
 
         /* Responsive Design */
         @media (max-width: 768px) {
-            .header nav {
-                flex-wrap: wrap;
-                gap: 10px;
+            .container {
+                padding: 20px;
             }
 
             .categories {
-                flex-wrap: wrap;
-                gap: 10px;
-            }
-
-            .tool-container textarea {
-                height: 150px;
+                gap: 5px;
             }
 
             .footer {
                 flex-direction: column;
-                align-items: center;
                 text-align: center;
+                gap: 10px;
             }
 
             .footer .right {
-                flex-direction: column;
+                justify-content: center;
+                gap: 10px;
             }
+        }
+
+        @media (max-width: 480px) {
+            button {
+                padding: 8px;
+                font-size: 14px;
             }
+
+            .output-area {
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
-  <!-- Header -->
+    <!-- Header -->
     <header class="header">
         <div class="logo">Keywords From Urls</div>
         <nav>
             <a href="https://keywordsfromurls.com/">Home</a>
-            
-            </nav>
+        </nav>
     </header>
 
     <!-- Main Content -->
     <main class="main">
         <div class="categories">
             <a href="keywords-grouping.html">
-                <button>Keyword Grouping</button></a>
-          <a href="keywords-grouping.html">
-            <button>Keywords Extractor</button></a>
-           <a href="https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html"><button>Keyword Density</button></a>
+                <button>Keyword Grouping</button>
+            </a>
+            <a href="keywords-grouping.html">
+                <button>Keywords Extractor</button>
+            </a>
+            <a href="https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html">
+                <button>Keyword Density</button>
+            </a>
         </div>
-  
-    <div class="container">
-        <h1>Slug Generator Tool</h1>
-
-        <label for="inputText">Enter Text:</label>
-        <input type="text" id="inputText" placeholder="Enter your text here">
-
-        <div>
-            <button onclick="setSeparator('-')">Hyphen (-)</button>
-            <button onclick="setSeparator('_')">Underscore (_)</button>
-        </div>
-
-        <div class="checkbox-container">
-            <div>
-                <label for="removeDot">Remove Dot (.):</label>
-                <input type="checkbox" id="removeDot">
-            </div>
+    
+        <div class="container">
+            <h1>Slug Generator Tool</h1>
+            <label for="inputText">Enter Text:</label>
+            <input type="text" id="inputText" placeholder="Enter your text here">
 
             <div>
-                <label for="removeNumbers">Remove Numbers:</label>
-                <input type="checkbox" id="removeNumbers">
+                <button onclick="setSeparator('-')">Hyphen (-)</button>
+                <button onclick="setSeparator('_')">Underscore (_)</button>
             </div>
+
+            <div class="checkbox-container">
+                <div>
+                    <label for="removeDot">Remove Dot (.):</label>
+                    <input type="checkbox" id="removeDot">
+                </div>
+
+                <div>
+                    <label for="removeNumbers">Remove Numbers:</label>
+                    <input type="checkbox" id="removeNumbers">
+                </div>
+            </div>
+
+            <button onclick="generateSlug()">Generate Slug</button>
+            <div class="output-area" id="outputArea"></div>
+            <button id="copyButton" class="copy-button" style="display:none;" onclick="copySlug()">Copy</button>
         </div>
+    </main>
 
-        <button onclick="generateSlug()">Generate Slug</button>
-
-        <div class="output-area" id="outputArea"></div>
-
-        <button id="copyButton" class="copy-button" style="display:none;" onclick="copySlug()">Copy</button>
-    </div>
-<!-- Footer -->
-    <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
-<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
-<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="left">&copy; 2024-25 Keywords From Urls</div>
         <div class="right">
             <a href="about-us.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
             <a href="privacy-policy.html">Privacy Policy</a>
             <a href="Disclaimer.html">Disclaimer</a>
-            <a href="Terms&condition.html">Terms&condition</a>
+            <a href="Terms&condition.html">Terms & Condition</a>
         </div>
     </footer>
+
     <script>
         let separator = '';
 
@@ -313,29 +292,14 @@
 
             let slug = inputText.trim().toLowerCase();
 
-            // Remove dots if selected
-            if (removeDot) {
-                slug = slug.replace(/\./g, '');
-            }
+            if (removeDot) slug = slug.replace(/\./g, '');
+            if (removeNumbers) slug = slug.replace(/\d+/g, '');
 
-            // Remove numbers if selected
-            if (removeNumbers) {
-                slug = slug.replace(/\d+/g, '');
-            }
-
-            // Replace spaces with the selected separator
             slug = slug.replace(/\s+/g, separator);
+            if (slug === separator) slug = '';
 
-            // If the result is just a separator, make it empty
-            if (slug === separator) {
-                slug = '';
-            }
-
-            // Display the generated slug
             const outputArea = document.getElementById('outputArea');
             outputArea.textContent = slug;
-
-            // Show the copy button
             document.getElementById('copyButton').style.display = 'inline-block';
         }
 
@@ -345,20 +309,16 @@
 
             if (!text) return;
 
-            // Copy the slug to clipboard
-            navigator.clipboard.writeText(text).then(function() {
+            navigator.clipboard.writeText(text).then(() => {
                 const copyButton = document.getElementById('copyButton');
                 copyButton.textContent = 'Copied!';
                 copyButton.classList.add('copied');
 
-                // Reset the button text after 4 seconds
-                setTimeout(function() {
+                setTimeout(() => {
                     copyButton.textContent = 'Copy';
                     copyButton.classList.remove('copied');
                 }, 4000);
-            }).catch(function(error) {
-                console.error('Error copying text: ', error);
-            });
+            }).catch(console.error);
         }
     </script>
 </body>
